--- a/client/src/App.css
+++ b/client/src/App.css
@@ -6,3 +6,13 @@
     color: #333;
   }
   
+  /* .graph-container {
+    width: 100%;
+    height: 80vh;
+  }
+  
+  button {
+    margin-top: 20px;
+    padding: 10px 20px;
+  }
+   */
